---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unpacking.md - Unpacking - Exactly too many values to unpack
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
```

# Diagnostics

```
error: lint:invalid-assignment
 --> /src/mdtest_snippet.py:1:1
  |
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
  | ^^^^ Too many values to unpack (expected 2, got 3)
  |

```
